--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "name": "react-native-web",
   "version": "0.12.3",
-  "description": "React Native for Web Patched Version with Modal",
+  "description": "React Native for Web",
   "module": "dist/index.js",
   "main": "dist/cjs/index.js",
   "sideEffects": false,
